website/websites/u64q/code/knucleotide.4.scala.log

Tue, 19 May 2015 19:21:23 GMT

MAKE:
mv knucleotide.scala-4.scala knucleotide.scala
/usr/local/src/scala-2.11.6/bin/scalac -optimise -target:jvm-1.8 knucleotide.scala
Picked up JAVA_TOOL_OPTIONS: -javaagent:/usr/share/java/jayatanaag.jar 
knucleotide.scala:109: error: wrong number of type arguments for scala.collection.mutable.HashTable, should be 2
class HashBag extends HashTable[String] {
                      ^
knucleotide.scala:119: error: not found: value entries
  def elements = entries
                 ^
knucleotide.scala:122: error: not found: value table
    var bucket = table(index(elemHashCode(key))).asInstanceOf[Entry]
                 ^
knucleotide.scala:122: error: not found: value index
    var bucket = table(index(elemHashCode(key))).asInstanceOf[Entry]
                       ^
knucleotide.scala:122: error: not found: value elemHashCode
    var bucket = table(index(elemHashCode(key))).asInstanceOf[Entry]
                             ^
knucleotide.scala:124: error: not found: value elemEquals
      if (elemEquals(entryKey(bucket),key)) return bucket
          ^
knucleotide.scala:128: error: not found: value addEntry
    addEntry(bucket)
    ^
7 errors found
/home/dunham/benchmarksgame/nanobench/makefiles/u64q.programs.Makefile:606: recipe for target 'knucleotide.scala-4.scala_run' failed
make: [knucleotide.scala-4.scala_run] Error 1 (ignored)
3.33s to complete and log all make actions

COMMAND LINE:
env JAVA_OPTS=-Xmx3G /usr/local/src/jdk1.8.0_45/bin/java -server -XX:+TieredCompilation -XX:+AggressiveOpts  -Xbootclasspath/a:/usr/local/src/scala-2.11.6/lib/scala-library.jar:/usr/local/src/scala-2.11.6/lib/akka-actors.jar:/usr/local/src/scala-2.11.6/lib/typesafe-config.jar knucleotide 0 < knucleotide-input250000.txt

PROGRAM FAILED 


PROGRAM OUTPUT:

Picked up JAVA_TOOL_OPTIONS: -javaagent:/usr/share/java/jayatanaag.jar 
Error: Could not find or load main class knucleotide
